--- a/.gitignore
+++ b/.gitignore
@@ -8,13 +8,7 @@ node_modules
 !.env.example
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
-.DS_Store
-node_modules
-/build
-/.svelte-kit
-/package
-.env
-.env.*
-!.env.example
 .vercel
 .output
+**/.dockerignore
+**/compose.yaml
