--- a/compose.yaml
+++ b/compose.yaml
@@ -8,7 +8,7 @@ services:
       - ORIGIN=https://www.whosfritz.de
     depends_on:
       - mongo_container
-    restart: always
+    restart: unless-stopped
 
 
   mongo_container:
@@ -17,7 +17,7 @@ services:
       - ${MONGO_PORT}:27017
     volumes:
       - mongo_container:/data/db
-    restart: always
+    restart: unless-stopped
 
 volumes:
   mongo_container:
