--- a/compose.yaml
+++ b/compose.yaml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   server:
     build:
@@ -9,7 +11,8 @@ services:
     depends_on:
       - mongo_container
     restart: unless-stopped
-
+    networks:
+      - portfolio_network
 
   mongo_container:
     image: mongo:latest
@@ -18,6 +21,12 @@ services:
     volumes:
       - mongo_container:/data/db
     restart: unless-stopped
+    networks:
+      - portfolio_network
 
 volumes:
   mongo_container:
+
+networks:
+  portfolio_network:
+    external: true
