trying to use env but vite is fucked up and doesnt let me do it

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,12 @@
-version: '3.8'
-
 services:
   server:
     build: .
     ports:
-      - ${SERVER_PORT}:${SERVER_PORT}
+      - $SERVER_PORT:$SERVER_PORT
+    environment:
+      - SERVER_PORT=$SERVER_PORT
+    env_file:
+      - .env
     depends_on:
       - mongo_container
     restart: unless-stopped
