--- a/compose.yaml
+++ b/compose.yaml
@@ -2,11 +2,7 @@ services:
   server:
     build: .
     ports:
-      - $SERVER_PORT:$SERVER_PORT
-    environment:
-      - SERVER_PORT=$SERVER_PORT
-    env_file:
-      - .env
+      - $SERVER_PORT:3000
     depends_on:
       - mongo_container
     restart: unless-stopped
@@ -25,6 +21,7 @@ services:
 
 volumes:
   mongo_container:
+
 
 networks:
   portfolio_network:
