--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-intersection-observer": "^1.0.0",
 		"tailwindcss": "^3.4.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
